# ansible-hands-on

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  COOKIECUTTER_CREDIT  Eggfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  develop_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
ansible_tutorial/: __init__.py  cli.py
ansible_tutorial_cli/: __init__.py  access_machine.py  auto_update_machine.py  cli.py  configure.py  data_types_json_example.py  data_types_yaml_example.py  setup.cfg  setup.py  tox.ini
ansible_tutorial_cli/githooks/: pre-commit
docs/: Makefile  ansible_tutorial_cli.rst  conf.py  exercises.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
exercises/: README.rst  configure.py
exercises/customize-your-own-modules/: output_0300.txt  playbook_0300.yml
exercises/example_01/: access_machine.py
exercises/example_03/: README.txt
exercises/example_06/: ansible_hosts
exercises/intro-update-through-ansible/: README.txt
exercises/playbook_examples/: data_types_json_example.py  demo_playbook_iter_01.yml  demo_playbook_iter_02.yml  demo_playbook_iter_05.yml  demo_playbook_iter_07.yml  demo_playbook_iter_09.yml  demo_playbook_iter_11.yml  demo_playbook_iter_12.yml  output_iter_01.txt  output_iter_04.txt  output_iter_06.txt  output_iter_11.txt
requirements/: development.txt  graph.txt  requirements.txt
src/: configure.py
src/example_01/: access_machine.py  (+1 more)
tests/: __init__.py  test_ansible_tutorial.py
(+178 files in other folders)
