[tool.poetry]
name = "ansible_hands_on_training"
version = "1.3.0"
description = "Ansible Hands-On Training"
authors = ["Glen Jarvis <<glen@glenjarvis.com>>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.9"
watchdog = "^0.10.2"

[tool.poetry.dev-dependencies]
tox = "^3.15.2"
flake8 = "^3.8.3"
coverage = "^5.1"
sphinx = "^3.1.0"
twine = "^3.1.1"
rstcheck = "^3.3.1"
pycodestyle = "^2.6.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
