[tool.poetry]
name = "ansible-hands-on"
version = "1.3.0"
description = "Ansible Hands-On Training"
authors = ["Glen Jarvis <glen@glenjarvis.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.6,<4"
wheel = "^0.36.2"
pip = "^20.3.3"
ansible = "^2.10.4"
Sphinx = "^3.3.1"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
twine = "^3.2.0"
rstcheck = "^3.3.1"
pycodestyle = "^2.6.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
